# project-management-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: bc5d55914f76_create_initial_tables.py  f96764623b86_add_model_constraints.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py
app/core/: config.py
app/database/: base.py  connection.py
app/models/: __init__.py  document.py  enums.py  project.py  project_member.py  user.py
app/repositories/: user_repo.py
app/schemas/: __init__.py  auth.py  document.py  project.py  user.py
app/services/: auth_service.py
docs/: requirements.md
tests/unit/: test_auth_service.py  test_security.py  test_user_repository.py
tests/unit/schemas/: test_auth_schemas.py  test_document_schemas.py  test_project_schemas.py  test_user_schemas.py
